# wikijump

./: .dockerignore  .prettierignore  CODEOWNERS  LICENSE.md  README.md
.do/: app.yaml
.github/: dependabot.yaml
.github/workflows/: deepwell.yaml  docker-build-caddy.dev.yaml  docker-build-caddy.local.yaml  docker-build-caddy.prod.yaml  docker-build-deepwell.dev.yaml  docker-build-deepwell.local.yaml  docker-build-deepwell.prod.yaml  docker-build-framerail.dev.yaml  docker-build-framerail.local.yaml  docker-build-framerail.prod.yaml  docker-build-minio.local.yaml  docker-build-minio.test.yaml  docker-build-postgres.local.yaml  docker-build-router.dev.yaml  docker-build-router.local.yaml  docker-build-router.prod.yaml  docker-build-template.yaml  docker-build-valkey.local.yaml  docker-build-wws.dev.yaml  docker-build-wws.local.yaml  docker-build-wws.prod.yaml  docker-push-caddy.dev.yaml  docker-push-caddy.prod.yaml  docker-push-deepwell.dev.yaml  docker-push-deepwell.prod.yaml  docker-push-framerail.dev.yaml  docker-push-framerail.prod.yaml  docker-push-minio.local.yaml  docker-push-minio.yaml  docker-push-wws.dev.yaml  docker-push-wws.prod.yaml  framerail.yaml  komodo-deploy.dev.yaml  komodo-deploy.prod.yaml  locales.yaml  wws.yaml
deepwell/: .env.example  Cargo.toml  README.md  askama.toml  config.example.toml
deepwell/migrations/: 20220906103252_deepwell.sql
deepwell/misc/: header.txt
deepwell/scripts/: generate-models.py  request.py
deepwell/seeder/: _admin.ftml  filters.json  pages.json  permissions.json  roles.json  sites.dev.patch  sites.json  users.json
deepwell/src/: api.rs  cache.rs  constants.rs  info.rs  lib.rs  license.rs  macros.rs  main.rs  middleware.rs  redis.rs  start.rs  watch.rs
deepwell/src/config/: args.rs  file.rs  mod.rs  object.rs  runtime_action.rs  secrets.rs
deepwell/src/database/: mod.rs
deepwell/src/endpoints/: auth.rs  basic_error.rs  blob.rs  caddy.rs  category.rs  domain.rs  email.rs  file.rs  file_revision.rs  health.rs  info.rs  link.rs  locale.rs  macros.rs  message.rs  misc.rs  mod.rs  page.rs  page_attribution.rs  page_lock.rs  page_revision.rs  parent.rs  role.rs  routing.rs  site.rs  site_member.rs  special_error.rs  text.rs  text_block.rs  user.rs  user_bot.rs  view.rs  vote.rs
deepwell/src/error/: convert.rs  error_type.rs  legacy.rs  mod.rs  new.rs  object.rs  old.rs
deepwell/src/hash/: blob.rs  mod.rs  text.rs
deepwell/src/locales/: arguments.rs  error.rs  fallback.rs  fluent.rs  mod.rs
deepwell/src/models/: alias.rs  audit_log.rs  authorization_token.rs  blob_blacklist.rs  blob_pending.rs  file.rs  file_revision.rs  filter.rs  forum_category.rs  forum_group.rs  forum_post.rs  forum_post_lock.rs  forum_post_revision.rs  forum_thread.rs  forum_thread_lock.rs  known_user.rs  message.rs  message_draft.rs  message_recipient.rs  message_record.rs  message_report.rs  mod.rs  page.rs  page_attribution.rs  page_category.rs  page_connection.rs  page_connection_missing.rs  page_link.rs  page_lock.rs  page_parent.rs  page_revision.rs  page_vote.rs  permission.rs  prelude.rs  relation.rs  role.rs  role_permission.rs  sea_orm_active_enums.rs  session.rs  site.rs  (+8 more)
deepwell/src/services/: basic_error.rs  context.rs  error.rs  macros.rs  mod.rs  outdate.rs  password.rs  special_error.rs  text.rs
deepwell/src/types/: array.rs  bytes.rs  connection_type.rs  conversion_error.rs  enums.rs  fetch_direction.rs  file_details.rs  file_order.rs  maybe.rs  mod.rs  page_details.rs  page_id.rs  page_order.rs  permissions.rs  reference.rs  rerender_depth.rs
deepwell/src/utils/: category.rs  crypto.rs  debug.rs  int.rs  locale.rs  mod.rs  slug.rs  string.rs  time.rs
deepwell/test/: Caddyfile.basic_local  Caddyfile.basic_localdev  Caddyfile.basic_prod  Caddyfile.full_prod  Caddyfile.long  Caddyfile.proxies
deepwell/test/caddy/: Caddyfile.basic_local  Caddyfile.basic_localdev  Caddyfile.basic_prod  Caddyfile.basic_prod_http  Caddyfile.full_prod  Caddyfile.long  Caddyfile.proxies
deepwell/tests/: README.md  locale.rs  misc.rs  page.rs  permission.rs  requests.rs  role.rs  text.rs  user.rs
deepwell/tests/common/: assert.rs  endpoint.rs  error.rs  mod.rs  params.rs  runner.rs
docs/: audit-log.md  development.md  dom-compatibility.md  glossary.md
docs/deployment/: concepts.md  dev.md
docs/wikidot/database-schema/: 1_schema.sql  2_seed.sql  README.md
framerail/: eslint.config.mjs  eslint.config.ts  package.json  pnpm-lock.yaml  prettier.config.mjs  stylelint.config.mjs  svelte.config.js  tsconfig.json  vite.config.ts
framerail/src/: app.d.ts  hooks.server.ts
framerail/src/lib/: defaults.ts  locales.ts  redirect.svelte  stores.svelte.ts  stores.ts  types.ts
framerail/src/routes/: +error.svelte  (+4 more)
install/dev/: README.md  docker-compose.yaml
install/local/: README.md  deploy.py  docker-compose.dev.yaml  docker-compose.yaml
locales/typed/: index.ts  package.json  pnpm-lock.yaml
locales/validator/: Cargo.toml
web/: package.json
web/resources/: package.json
web/scripts/: vite-pack.js
wws/: .env.example  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  secrets.rs
wws/misc/: header.txt
wws/src/: attachment.rs  cache.rs  deepwell.rs  error.rs  fetch.rs  framerail.rs  host.rs  info.rs  language.rs  macros.rs  main.rs  path.rs  percent.rs  range.rs  route.rs  state.rs  trace.rs
wws/src/config/: args.rs  mod.rs  object.rs  secrets.rs
wws/src/error/: basic.rs  fallback.rs  html.rs  mod.rs  rust.rs  special.rs  wws.rs
wws/src/handler/: basic_error.rs  code.rs  error.rs  fallback_error.rs  file.rs  framerail.rs  html.rs  misc.rs  mod.rs  redirect.rs  robots.rs  special_error.rs  text_block.rs  well_known.rs
(+352 files in other folders)
