[package]
name = "wikijump-locales-validator"
description = "Validate Wikijump's Fluent localizatoin files"
repository = "https://github.com/scpwiki/wikijump/tree/develop/locales/validator"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikijump", "localization"]
categories = []
exclude = [".gitignore"]

version = "0.1.0"
authors = ["Emmie Maeda <emmie.maeda@gmail.com>"]
edition = "2024"

[dependencies]
fluent-bundle = "0.15"
fluent-syntax = "0.11"
str-macro = "1"
unic-langid = { version = "0.9", features = ["macros"] }
